agrego animaciones en cajas de descargas y en barra de navegacion superior

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                 <nav> 
                     <!-- Barra de navegacion superior -->
                     <ul class="ListaBarraSuperior">
-                        <li><a href="./index.html">Home</a></li>
-                        <li><a href="pages/procedimientos.html">Procedimientos</a></li>
-                        <li><a href="pages/documentos.html">Documentos</a></li>
-                        <li><a href="pages/manuales.html">Manuales</a></li>
-                        <li><a href="pages/contactos.html">Contactos</a></li>
+                        <li class="ListaBarraSuperior__Animacion"><a href="./index.html">Home</a></li>
+                        <li class="ListaBarraSuperior__Animacion"><a href="pages/procedimientos.html">Procedimientos</a></li>
+                        <li class="ListaBarraSuperior__Animacion"><a href="pages/documentos.html">Documentos</a></li>
+                        <li class="ListaBarraSuperior__Animacion"><a href="pages/manuales.html">Manuales</a></li>
+                        <li class="ListaBarraSuperior__Animacion"><a href="pages/contactos.html">Contactos</a></li>
                         <img class="LogoSuperiorDerecho" width="35%" height="80%" src="./assets/images/Teleperformance-logo-barra.png" alt="">
                     </ul>
                     <!-- <img class="LogoSuperiorDerecho" width="35%" height="70%" src="./assets/images/Teleperformance-logo-barra.png" alt=""> -->
