--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -19,11 +19,11 @@
             <nav> 
                 <!-- Barra de navegacion superior -->
                 <ul class="ListaBarraSuperior">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="../pages/procedimientos.html">Procedimientos</a></li>
-                    <li><a href="../pages/documentos.html">Documentos</a></li>
-                    <li><a href="../pages/manuales.html">Manuales</a></li>
-                    <li><a href="../pages/contactos.html">Contactos</a></li>
+                    <li class="ListaBarraSuperior__Animacion"><a href="../index.html">Home</a></li>
+                    <li class="ListaBarraSuperior__Animacion"><a href="../pages/procedimientos.html">Procedimientos</a></li>
+                    <li class="ListaBarraSuperior__Animacion"><a href="../pages/documentos.html">Documentos</a></li>
+                    <li class="ListaBarraSuperior__Animacion"><a href="../pages/manuales.html">Manuales</a></li>
+                    <li class="ListaBarraSuperior__Animacion"><a href="../pages/contactos.html">Contactos</a></li>
                     <img class="LogoSuperiorDerecho" width="25%" height="50%" src="../assets/images/Teleperformance-logo-barra.png" alt="">
                 </ul>
             </nav>
