--- a/pages/manuales.html
+++ b/pages/manuales.html
@@ -19,11 +19,11 @@
             <nav> 
                 <!-- Barra de navegacion superior -->
                 <ul class="ListaBarraSuperior">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="../pages/procedimientos.html">Procedimientos</a></li>
-                    <li><a href="../pages/documentos.html">Documentos</a></li>
-                    <li><a href="../pages/manuales.html">Manuales</a></li>
-                    <li><a href="../pages/contactos.html">Contactos</a></li>
+                    <li class="ListaBarraSuperior__Animacion"><a href="../index.html">Home</a></li>
+                    <li class="ListaBarraSuperior__Animacion"><a href="../pages/procedimientos.html">Procedimientos</a></li>
+                    <li class="ListaBarraSuperior__Animacion"><a href="../pages/documentos.html">Documentos</a></li>
+                    <li class="ListaBarraSuperior__Animacion"><a href="../pages/manuales.html">Manuales</a></li>
+                    <li class="ListaBarraSuperior__Animacion"><a href="../pages/contactos.html">Contactos</a></li>
                     <img class="LogoSuperiorDerecho"  src="../assets/images/Teleperformance-logo-barra.png" alt="">
                 </ul>
             </nav>
@@ -31,7 +31,7 @@
     </header>
     <h1>Manuales</h1>
     <section class="CuadroDeDescarga">
-        <div class="CuadroDeDescarga__Areas">
+        <div class="CuadroDeDescarga__Areas CuadroDeDescarga__Animacion">
             <h3>Manuales ADP</h3>
             <li><a href="">Manual Liquidación</a></li>
             <li><a href="">Manual ART</a></li>
@@ -42,7 +42,7 @@
             <li><a href="">Manual 4</a></li>
             <li><a href="">Manual 5</a></li>
         </div>
-        <div class="CuadroDeDescarga__Areas">
+        <div class="CuadroDeDescarga__Areas CuadroDeDescarga__Animacion">
             <h3>Manuales Legales</h3>
             <li><a href="">Manual 1</a></li>
             <li><a href="">Manual 2</a></li>
@@ -50,7 +50,7 @@
             <li><a href="">Manual 4</a></li>
             <li><a href="">Manual 5</a></li>
         </div>
-        <div class="CuadroDeDescarga__Areas">
+        <div class="CuadroDeDescarga__Areas CuadroDeDescarga__Animacion">
             <h3>Manuales Licencias</h3>
             <li><a href="">Manual Enfermedad</a></li>
             <li><a href="">Manual 1</a></li>
@@ -64,7 +64,7 @@
             <li><a href="">Manual 9</a></li>
             <li><a href="">Manual 10</a></li>
         </div>
-        <div class="CuadroDeDescarga__Areas">
+        <div class="CuadroDeDescarga__Areas CuadroDeDescarga__Animacion">
             <h3>Manuales Otros</h3>
             <li><a href="">Manual 1</a></li>
             <li><a href="">Manual 2</a></li>
@@ -72,7 +72,7 @@
             <li><a href="">Manual 4</a></li>
             <li><a href="">Manual 5</a></li>
         </div>
-        <div class="CuadroDeDescarga__Areas">
+        <div class="CuadroDeDescarga__Areas CuadroDeDescarga__Animacion">
             <h3>Manuales Otros</h3>
             <li><a href="">Manual 1</a></li>
             <li><a href="">Manual 2</a></li>
