agregado bootstrap en rama nueva

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Dirt&display=swap" rel="stylesheet" />
     <!-- link de la hoja de estilos -->
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <title>TP Chile</title>
 </head>
 <body>
@@ -20,11 +21,11 @@
                 <nav> 
                     <!-- Barra de navegacion superior -->
                     <ul class="ListaBarraSuperior">
-                        <li class="ListaBarraSuperior__Animacion"><a href="./index.html">Home</a></li>
-                        <li class="ListaBarraSuperior__Animacion"><a href="pages/procedimientos.html">Procedimientos</a></li>
-                        <li class="ListaBarraSuperior__Animacion"><a href="pages/documentos.html">Documentos</a></li>
-                        <li class="ListaBarraSuperior__Animacion"><a href="pages/manuales.html">Manuales</a></li>
-                        <li class="ListaBarraSuperior__Animacion"><a href="pages/contactos.html">Contactos</a></li>
+                        <li class="ListaBarraSuperior__Animacion"><a href="./index.html" class="text-white">Home</a></li>
+                        <li class="ListaBarraSuperior__Animacion"><a href="pages/procedimientos.html" class="text-white">Procedimientos</a></li>
+                        <li class="ListaBarraSuperior__Animacion"><a href="pages/documentos.html" class="text-white">Documentos</a></li>
+                        <li class="ListaBarraSuperior__Animacion"><a href="pages/manuales.html" class="text-white">Manuales</a></li>
+                        <li class="ListaBarraSuperior__Animacion"><a href="pages/contactos.html" class="text-white">Contactos</a></li>
                         <img class="LogoSuperiorDerecho" width="35%" height="80%" src="./assets/images/Teleperformance-logo-barra.png" alt="">
                     </ul>
                     <!-- <img class="LogoSuperiorDerecho" width="35%" height="70%" src="./assets/images/Teleperformance-logo-barra.png" alt=""> -->
@@ -34,28 +35,32 @@
         </header>
         <h1 class="TituloPrincipal">Portal TP Chile</h1>
         <!-- la siguiente seccion iria en la pate izquierda de la pantalla -->
-        <section class="AcomodarPrincipal">
-            <div class="Novedades">
-                <div>
-                    <!-- aca separo cada entrada nueva con DIV dentro de section para poder aplicarle estilos a toda la seccion -->
-                    <h3>Nuevo convenio</h3>
-                    <p> Aqui irian las ultimas novedades...Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum iste dicta iusto repellendus, deleniti tenetur libero molestias distinctio voluptatem unde delectus earum consequatur dolorem modi reprehenderit! Asperiores minima saepe at!</p>
+        <section class="container">
+            <div class="row">
+                <div class="col-9 Novedades">
+                    <div>
+                        <!-- aca separo cada entrada nueva con DIV dentro de section para poder aplicarle estilos a toda la seccion -->
+                        <h3>Nuevo convenio</h3>
+                        <p> Aqui irian las ultimas novedades...Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum iste dicta iusto repellendus, deleniti tenetur libero molestias distinctio voluptatem unde delectus earum consequatur dolorem modi reprehenderit! Asperiores minima saepe at!</p>
+                    </div>
+                    <div>
+                        <h3>Escalas salariales al 15/08/2022</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam eum natus sunt dolorem soluta nobis similique pariatur ipsam, assumenda necessitatibus amet numquam facilis deserunt dicta dolor excepturi perferendis ipsa quo.</p>
+                    </div>
                 </div>
-                <div>
-                    <h3>Escalas salariales al 15/08/2022</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam eum natus sunt dolorem soluta nobis similique pariatur ipsam, assumenda necessitatibus amet numquam facilis deserunt dicta dolor excepturi perferendis ipsa quo.</p>
+                <div class="col-1">
+                </div>
+                <div class="col-2 BarraLateral">
+                    <!-- barra lateral derecha -->
+                    <div>
+                        <h4>Barra lateral</h4>
+                        <button>ADP</button>
+                        <button>Informes</button>
+                        <button>Legales</button>
+                        <button>Otros</button>
+                    </div>
                 </div>
             </div>
-            <section class="BarraLateral">
-                <!-- barra lateral derecha -->
-                <div>
-                    <h4>Barra lateral</h4>
-                    <button>ADP</button>
-                    <button>Informes</button>
-                    <button>Legales</button>
-                    <button>Otros</button>
-                </div>
-            </section>
         </section>
         <footer>
             <!-- <img width="10%" height="10%" src="./assets/images/Teleperformance-logo-barra.png" alt=""> -->
