--- a/pages/manuales.html
+++ b/pages/manuales.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Dirt&display=swap" rel="stylesheet" />
     <!-- link de la hoja de estilos -->
     <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <title>TP Chile</title>
 </head>
 <body>
@@ -19,11 +20,11 @@
             <nav> 
                 <!-- Barra de navegacion superior -->
                 <ul class="ListaBarraSuperior">
-                    <li class="ListaBarraSuperior__Animacion"><a href="../index.html">Home</a></li>
-                    <li class="ListaBarraSuperior__Animacion"><a href="../pages/procedimientos.html">Procedimientos</a></li>
-                    <li class="ListaBarraSuperior__Animacion"><a href="../pages/documentos.html">Documentos</a></li>
-                    <li class="ListaBarraSuperior__Animacion"><a href="../pages/manuales.html">Manuales</a></li>
-                    <li class="ListaBarraSuperior__Animacion"><a href="../pages/contactos.html">Contactos</a></li>
+                    <li class="ListaBarraSuperior__Animacion"><a href="../index.html" class="text-white">Home</a></li>
+                    <li class="ListaBarraSuperior__Animacion"><a href="../pages/procedimientos.html" class="text-white">Procedimientos</a></li>
+                    <li class="ListaBarraSuperior__Animacion"><a href="../pages/documentos.html" class="text-white">Documentos</a></li>
+                    <li class="ListaBarraSuperior__Animacion"><a href="../pages/manuales.html" class="text-white">Manuales</a></li>
+                    <li class="ListaBarraSuperior__Animacion"><a href="../pages/contactos.html" class="text-white">Contactos</a></li>
                     <img class="LogoSuperiorDerecho"  src="../assets/images/Teleperformance-logo-barra.png" alt="">
                 </ul>
             </nav>
@@ -36,8 +37,8 @@
             <li><a href="">Manual Liquidación</a></li>
             <li><a href="">Manual ART</a></li>
             <li><a href="">Manual carga de costos</a></li>
-            <li><a href="">Manual 1</a></li>
-            <li><a href="">Manual 2</a></li>
+            <li><a href="../downloads/manuales/manual1.docx">Manual 1</a></li>
+            <li><a href="../downloads/manuales/manual1.docx">Manual 2</a></li>
             <li><a href="">Manual 3</a></li>
             <li><a href="">Manual 4</a></li>
             <li><a href="">Manual 5</a></li>
